--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <hr>
         <div id="wrapper_2" class="container">
-            <a class="text_id-1" href="https://instagram.com/czszod.world" target="blank">Search in Instagram</a>
+            <a class="text_id-1" href="https://instagram.com/chszod.world" target="blank">Search in Instagram</a>
         </div>
     </header>
 </body>
